# python_metrik

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  README_POC.md  pyproject.toml
.github/workflows/: ci.yml
mds3loader/: __init__.py  __main__.py  cli.py  config.py
mds3loader/loader/: copy_builder.py  schema_inference.py
mds3loader/metadata/: generator.py
mds3loader/utils/: logger.py
poc/: expected_schema.json
poc/data/: sample_people.csv
tests/: test_cli.py  test_config.py  test_copy_builder.py  test_logger.py  test_metadata.py  test_poc_flow.py
