[tool.poetry]
name = "nmds3loader"
version = "0.1.0"
description = "A reproducible Python environment"
authors = ["Developer <dev@example.com>"]
packages = [{ include = "mds3loader" }]

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.1.0"
typer = "^0.9.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pre-commit = "^3.7.0"
black = "^24.4.2"
isort = "^5.12.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
mds3loader = "mds3loader.cli:app"
